# pup

./: .datadog-ci.json  .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-3rdparty.csv  Makefile  NOTICE  README.md  SUMMARY.md  TEST_COVERAGE_SUMMARY.md  go.mod  go.sum  main.go
.cargo/: config.toml
.claude/code-health/: 3p-lib-scan.md  agent-readability.md  architecture-review.md  cleanup.md  surgical-refactor.md  swarm-fix.md  test-coverage.md  ticket-quality.md  weekly-code-health-sweep.md  yagni-simplifier.md
.claude/plans/: SUMMARY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/badges/: coverage.json
.github/workflows/: ci.yml  release.yml  rust-ci.yml
cmd/: agent.go  agent_test.go  alias.go  alias_test.go  api_keys.go  api_keys_test.go  apm.go  apm_test.go  app_keys.go  app_keys_test.go  audit_logs.go  auth.go  auth_test.go  auth_wasm.go  cases.go  cicd.go  cloud.go  cloud_test.go  code_coverage.go  code_coverage_test.go  cost.go  dashboards.go  dashboards_test.go  data_governance.go  data_governance_test.go  downtime.go  downtime_test.go  error_tracking.go  error_tracking_test.go  events.go  events_test.go  hamr.go  hamr_test.go  incidents.go  incidents_test.go  infrastructure.go  integrations.go  integrations_test.go  investigations.go  investigations_test.go  (+47 more)
cmd/testutil/: testutil.go
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMMANDS.md  CONTRIBUTING.md  DATADOG_CI.md  DATADOG_CI_SETUP.md  EXAMPLES.md  HOMEBREW_TAP_SETUP.md  LLM_GUIDE.md  MIGRATION_GUIDE.md  RELEASING.md  RUST_MIGRATION.md  TESTING.md  TROUBLESHOOTING.md  homebrew-pack-trust-policy.yaml
internal/version/: version.go
pkg/agenthelp/: agenthelp.go  agenthelp_test.go  guide.go  guide.md  guide_test.go  steering.go  steering_test.go
pkg/auth/callback/: server.go  server_test.go
pkg/auth/dcr/: client.go  client_test.go
pkg/auth/oauth/: client.go  client_test.go  pkce_test.go
pkg/auth/storage/: factory.go  factory_test.go  factory_wasm.go  keychain.go  keychain_test.go  keychain_wasm.go  storage.go  storage_test.go
pkg/auth/types/: types_test.go
pkg/client/: auth_validator.go  auth_validator_test.go  client.go  client_oauth_test.go  client_test.go  oauth_storage.go  oauth_storage_wasm.go
pkg/config/: alias.go  alias_test.go  config.go  config_test.go
pkg/formatter/: envelope.go  envelope_test.go  formatter.go  formatter_test.go
pkg/useragent/: useragent.go  useragent_test.go
pkg/util/: time.go  time_test.go
pup-rs/: Cargo.toml
pup-rs/src/: client.rs  config.rs  formatter.rs  main.rs  useragent.rs  util.rs
pup-rs/src/auth/: storage.rs
pup-rs/src/commands/: agent.rs  api_keys.rs  apm.rs  app_keys.rs  audit_logs.rs  auth.rs  cases.rs  cicd.rs  cloud.rs  code_coverage.rs  cost.rs  dashboards.rs  data_governance.rs  downtime.rs  error_tracking.rs  events.rs  fleet.rs  hamr.rs  incidents.rs  infrastructure.rs  integrations.rs  investigations.rs  logs.rs  metrics.rs  misc.rs  mod.rs  monitors.rs  network.rs  notebooks.rs  obs_pipelines.rs  on_call.rs  rum.rs  scorecards.rs  security.rs  service_catalog.rs  slos.rs  status_pages.rs  synthetics.rs  tags.rs  usage.rs  (+1 more)
pup-rs/tests/: compare_requests.py  generate_commands.sh  generate_report.sh  parity_report.html  run_comparison.sh
pup-rs/tests/mock_server/: server.py
pup-rs/tests/mock_server/fixtures/: v1_dashboard.json  v1_dashboards.json  v1_deleted.json  v1_ip_ranges.json  v1_metrics.json  v1_monitor.json  v1_monitors.json  v2_incident.json  v2_incidents.json  v2_logs_aggregate.json  v2_logs_list.json  v2_rum_apps.json  v2_teams.json
pup-rs/tests/mockdd/: go.mod  handler.go  main.go  routes.go
pup-rs/tests/mockdd/fixtures/: v1_dashboard.json  v1_dashboards.json  v1_deleted.json  v1_events.json  v1_host_tags.json  v1_hosts.json  v1_ip_ranges.json  v1_metrics.json  v1_monitor.json  v1_monitors.json  v1_notebook.json  v1_notebooks.json  v1_slo.json  v1_slos.json  v1_synthetics_tests.json  v1_tags.json  v2_cases.json  v2_fleet_agents.json  v2_generic_data.json  v2_hamr.json  v2_incident.json  v2_incidents.json  v2_logs_aggregate.json  v2_logs_list.json  v2_pipelines.json  v2_rum_apps.json  v2_scanner_config.json  v2_security_rules.json  v2_team.json  v2_teams.json  v2_users.json
scripts/: compare.sh  release.sh
src/: api.rs  client.rs  config.rs  formatter.rs  lib.rs  main.rs  test_commands.rs  useragent.rs  util.rs  version.rs
src/auth/: callback.rs  dcr.rs  mod.rs  pkce.rs  storage.rs  types.rs
src/commands/: agent.rs  alias.rs  api_keys.rs  apm.rs  app_keys.rs  audit_logs.rs  auth.rs  cases.rs  cicd.rs  cloud.rs  code_coverage.rs  cost.rs  dashboards.rs  data_governance.rs  downtime.rs  error_tracking.rs  events.rs  fleet.rs  hamr.rs  incidents.rs  infrastructure.rs  integrations.rs  investigations.rs  logs.rs  metrics.rs  misc.rs  mod.rs  monitors.rs  network.rs  notebooks.rs  obs_pipelines.rs  on_call.rs  organizations.rs  product_analytics.rs  rum.rs  scorecards.rs  security.rs  service_catalog.rs  slos.rs  static_analysis.rs  (+7 more)
tests/: parity_report.html
