[package]
name = "pup"
version = "0.22.0"
edition = "2021"

[features]
default = ["native"]
native = [
    "dep:datadog-api-client",
    "dep:keyring",
    "dep:dirs",
    "dep:open",
    "dep:reqwest-middleware",
    "dep:async-trait",
    "dep:task-local-extensions",
    "tokio/full",
    "comfy-table/tty",
]
wasi = ["tokio/rt", "tokio/macros", "reqwest/rustls-tls"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.66"

# Async runtime (features selected by native/wasi feature flags)
tokio = { version = "1", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

# HTTP (version-matched to DD client for native; used directly for WASI)
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1"

# UUID parsing (version-matched to DD client)
uuid = "1"

# Time
chrono = "0.4"
regex = "1"

# Output formatting (tty feature disabled for WASM — no crossterm)
comfy-table = { version = "7", default-features = false }

# Auth — OAuth2 PKCE + token storage
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
url = "2"

# Crypto for fallback storage
aes-gcm = "0.10"

# ---- Native-only dependencies ----

# Datadog API client (pins reqwest 0.11 + reqwest-middleware 0.2)
datadog-api-client = { version = "0.27", optional = true }

# HTTP middleware (version-matched to DD client)
reqwest-middleware = { version = "0.2", optional = true }
async-trait = { version = "0.1", optional = true }
task-local-extensions = { version = "0.1", optional = true }

# OS keychain for token storage
keyring = { version = "3", features = ["apple-native", "linux-native"], optional = true }

# XDG config directory resolution
dirs = { version = "6", optional = true }

# Browser opening for OAuth login
open = { version = "5", optional = true }
